Fixed ros2 doctor and ros2 command not found error:    - changed source /opt/ros/$ROS_DISTRO/setup.bash to /opt/ros/$ROS_DISTRO/install/setup.bash
Fixed ZED_Explorer and ZED_Diagnostic not running in container:
   - issue arised from running those command with USER as root, fixed by changing USER to jetson
     * added password to jetson
     * added group "sudo to "jetson" user in order to allow development inside the container
     * added group "video" to "jetson" user to let it connect to gpu on jetson

--- a/Docker/jetson/Dockerfile
+++ b/Docker/jetson/Dockerfile
@@ -107,7 +107,10 @@ RUN apt-get update && apt-get install -y -f --no-install-recommends \
 ###
 
 # Create New User for Jetson
-RUN adduser jetson --disabled-password --gecos "" 
+RUN adduser jetson --disabled-password --gecos "" && \
+    echo "jetson:jetson" | chpasswd && \
+	adduser jetson sudo && \
+	adduser jetson video
 
 #TODO: whenever someone is rebuilding this without cache, pls include zstd in one of the layers above
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -125,11 +128,14 @@ RUN wget "https://stereolabs.sfo2.cdn.digitaloceanspaces.com/zedsdk/5.0/ZED_SDK_
 
 COPY SN33688213.conf /usr/local/zed/settings/
 
-RUN mkdir -p /ros2_ws/src
-WORKDIR /ros2_ws
+#Change User 
+USER jetson
+
+RUN mkdir -p ~/ros2_ws/src
+WORKDIR ~/ros2_ws
 
 # Set up environment variables
-RUN echo "source /opt/ros/$ROS_DISTRO/setup.bash" >> ~/.bashrc \
+RUN echo "source /opt/ros/$ROS_DISTRO/install/setup.bash" >> ~/.bashrc \
     && echo "source /ros2_ws/install/setup.bash" >> ~/.bashrc
 
 # Set default shell to Bash
