--- a/Docker/jetson/docker-compose.yml
+++ b/Docker/jetson/docker-compose.yml
@@ -31,7 +31,7 @@
 
 services:
   douglas:
-    image: "mcgillrobotics/auv_2026:ros2"    # Replace with your built Docker image tag
+    image: "mcgillrobotics/auv_2026:ros2"    
     runtime: nvidia
     privileged: true
     network_mode: host
@@ -57,7 +57,6 @@ services:
       - /tmp:/tmp
       - /var/nvidia/nvcam/settings/:/var/nvidia/nvcam/settings/
       - /etc/systemd/system/zed_x_daemon.service:/etc/systemd/system/zed_x_daemon.service
-
       - type: bind 
         source: ../../../AUV-2026/ros2_ws
         target: /root/ros2_ws
