--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 [submodule "ros2_ws/src/zed-ros2-wrapper"]
 	path = ros2_ws/src/zed-ros2-wrapper
 	url = https://github.com/stereolabs/zed-ros2-wrapper.git
+[submodule "ros2_ws/src/ros-tcp-endpoint"]
+	path = ros2_ws/src/ros-tcp-endpoint
+	url = https://github.com/Unity-Technologies/ROS-TCP-Endpoint.git
+	branch = main-ros2
