--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,17 +6,20 @@
 			"WORKSPACE": "${containerWorkspaceFolder}"
 		}
 	},
-    // This will launch the container as a non-root user
-    "remoteUser" : "ros",
+    "remoteUser" : "root",
     "runArgs": [
          // This will allow you to use a ptrace-based debugger like C++, Go, and Rust.
-        "--network=host",
-		"--cap-add=SYS_PTRACE",
-		"--security-opt=seccomp:unconfined",
-		"--security-opt=apparmor:unconfined",
-		"--volume=/tmp/.X11-unix:/tmp/.X11-unix",
-		// "--volume=/mnt/wslg:/mnt/wslg",
-		"--ipc=host"
+	"--network=host",
+        "--cap-add=SYS_PTRACE",
+        "--security-opt=seccomp:unconfined",
+        "--security-opt=apparmor:unconfined",
+
+        // GUI support
+        "--env=DISPLAY=${localEnv:DISPLAY}",
+        "--volume=/tmp/.X11-unix:/tmp/.X11-unix:rw",
+
+        // Shared memory (needed for rqt, Foxglove bridge stability)
+        "--ipc=host"
     ],
     "containerEnv": {
 		"DISPLAY": "${localEnv:DISPLAY}", // Needed for GUI try ":0" for windows
@@ -43,5 +46,14 @@
 				"zachflower.uncrustify"
             ]
         }
-    }
+    },
+    "mounts": [
+        {
+            "type": "bind",
+            "source": "${localWorkspaceFolder}",
+            "target": "/root/AUV-2026"
+        }
+    ],
+
+    "workspaceFolder": "/root/AUV-2026"
 }
