--- a/Docker/dev/Dockerfile
+++ b/Docker/dev/Dockerfile
@@ -1,36 +1,54 @@
 # Use the official ROS 2 Humble image as the base image
 FROM althack/ros2:humble-dev
 
-# Set up the environment
-ENV ROS_DISTRO=humble
+# Set up environment
 ENV LANG=C.UTF-8
 ENV LC_ALL=C.UTF-8
-
 ENV DEBIAN_FRONTEND=noninteractive
+ENV ROS_DISTRO=humble
 
-# Install additional tools and dependencies
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    git \
-    python3-colcon-common-extensions \
-    python3-pip \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install ROS 2 packages
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    ros-humble-usb-cam \  
-    && rm -rf /var/lib/apt/lists/*
+    apt-utils \
+    build-essential \
+    cmake \
+    curl \
+    git \
+    git-lfs \
+    gnupg2 \
+    less \
+    lsb-release \
+    mesa-utils \
+    python3 \
+    python3-dev \
+    python3-pip \
+    python3-setuptools \
+    python3-wheel \
+    python3-colcon-common-extensions \
+    python3-rosdep \
+    python3-vcstools \
+    sudo \
+    tar \
+    tmux \
+    v4l-utils usbutils \ 
+    vim \
+    wget \
+    x11-apps \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
-#TODO: add sbg driver (compile from source)
+# ROS packages 
+RUN apt-get update && apt-get install -y --no-install-recommends \
+   ros-$ROS_DISTRO-joy \
+   ros-$ROS_DISTRO-joy-teleop \
+   ros-$ROS_DISTRO-foxglove-bridge \
+   ros-$ROS_DISTRO-mavros \
+   ros-$ROS_DISTRO-rviz2 \
+   && rm -rf /var/lib/apt/lists/* \
+   && apt-get clean
 
-# Create a workspace directory
-RUN mkdir -p /ros2_ws/src
+# Create workspace
+WORKDIR /root/AUV-2026
 
-# Set the working directory
-WORKDIR /ros2_ws
-
-# Source the ROS 2 setup file
-RUN echo "source /opt/ros/$ROS_DISTRO/setup.bash" >> /home/ros/.bashrc
-
-# Default command (starts a bash shell)
+RUN echo "source /opt/ros/$ROS_DISTRO/setup.bash" >> /root/.bashrc && \
+    echo "if [ -f /root/AUV-2026/ros2_ws/install/setup.bash ]; then source /root/AUV-2026/ros2_ws/install/setup.bash; fi" >> /root/.bashrc
 CMD ["bash"]
