Add: Colcon build CI workflow

--- a/.github/workflows/docker-images-main.yml
+++ b/.github/workflows/docker-images-main.yml
@@ -6,6 +6,7 @@ on:
   pull_request:
     branches: [ "main", "pooltest/*" ]
   workflow_dispatch:
+  # Note: keeps our Dockerhub up to date with latest working images
   schedule:
     - cron: '0 0,12 * * *'
 
