added git clone in dockerfile and changed the mount to allow branch switching inside the container

--- a/Docker/jetson/Dockerfile
+++ b/Docker/jetson/Dockerfile
@@ -190,13 +190,14 @@ RUN /bin/bash -c "source /opt/ros/$ROS_DISTRO/install/setup.bash && \
   ' --no-warn-unused-cli' "
 
 # Install ZED wrapper and IMU Driver
-WORKDIR /root/ros2_ws/src
+RUN git clone --recursive https://github.com/mcgill-robotics/AUV-2026.git 
+WORKDIR /root/AUV-2026/ros2_ws/src
 
 RUN git clone --branch ros2 https://github.com/xsenssupport/Xsens_MTi_ROS_Driver_and_Ntrip_Client.git && \
     git clone https://github.com/stereolabs/zed-ros2-wrapper.git
 
 # Build the ZED Wrapper and IMU driver
-WORKDIR /root/ros2_ws
+WORKDIR /root/AUV-2026/ros2_ws/
 RUN /bin/bash -c "source /opt/ros/$ROS_DISTRO/install/setup.bash && \
   source /root/dependencies_ws/install/setup.bash && \
   colcon build --parallel-workers $(nproc) --symlink-install \
@@ -206,6 +207,6 @@ RUN /bin/bash -c "source /opt/ros/$ROS_DISTRO/install/setup.bash && \
   ' -DCMAKE_CXX_FLAGS="-Wl,--allow-shlib-undefined"' \
   ' --no-warn-unused-cli' "
 
-RUN echo "source /opt/ros/humble/install/setup.bash && source /root/dependencies_ws/install/setup.bash && source /root/ros2_ws/install/setup.bash" >> ~/.bashrc
+RUN echo "source /opt/ros/humble/install/setup.bash && source /root/dependencies_ws/install/setup.bash && source /root/AUV-2026/ros2_ws/install/setup.bash" >> ~/.bashrc
 RUN echo "tmux" >> ~/.bashrc
 CMD ["bash"]
